# qq-group-name-extract

./: Cargo.toml  output.txt
src/: lib.rs  main.rs  qqtable.rs  table.rs
