[package]
name = "qq-group-name-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
scraper = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
walkdir = "2"
clap-verbosity-flag = "1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
eyre = "0.6.8"
lazy_static = "1.4.0"
